# seralign

./: .gitignore
data/bongard/: convert.pl
data/mutagenesis/188/: extr.pl  is_activeplain.pl
data/mutagenesis/results/: runMDS.R
data/randompat/results/: lalign.pl  lalign2.pl  render.sh
src/: .gdbinit  CMakeLists.txt  main.cpp
src/actions/: CMakeLists.txt  action_cfg.cpp  build_db.cpp  build_db.hpp  fastmap_distancemat.cpp  fastmap_distancemat.hpp  serialize.cpp  serialize.hpp
src/configuration/: configuration.cpp
src/db/: CMakeLists.txt  DBPoint.hpp  anndb.cpp  anndb.hpp  db.hpp  db_cfg.cpp  gdist_projected_db.cpp  gdist_projected_db.hpp  icpdb.cpp  icpdb.hpp  pointnn.cpp  pointnn.hpp
src/graph_embedder/: CMakeLists.txt  fastmap_embedder.cpp  fastmap_embedder.hpp  feature_embedder.cpp  feature_embedder.hpp  graph_embedder.cpp  graph_embedder.hpp  graph_embedder_cfg.cpp  heatkernel_embedder.cpp  heatkernel_embedder.hpp  spectral_embedder.cpp  spectral_embedder.hpp
src/graph_gen/: CMakeLists.txt  DegreeSort.cpp  DegreeSort.hpp  GraphFromAdj.cpp  GraphFromAdj.hpp  adjmat_gen.cpp  adjmat_gen.hpp  adjmat_gen_cfg.cpp  full_conn_adjmat_gen.cpp  full_conn_adjmat_gen.hpp  jumbled_adjmat_gen.cpp  jumbled_adjmat_gen.hpp  mutagenesis.cpp  mutagenesis.hpp  random_adjmat_gen.cpp  random_adjmat_gen.hpp  random_pat_adjmat_gen.cpp  random_pat_adjmat_gen.hpp  sdf_adjmat_gen.cpp  sdf_adjmat_gen.hpp
src/postproc/: CMakeLists.txt  GraphVizPrint.cpp  GraphVizPrint.hpp  PlainPrinter.cpp  PlainPrinter.hpp  PosTSVPrinter.cpp  PosTSVPrinter.hpp  RealXMLPrint.cpp  RealXMLPrint.hpp  localign_distmat.cpp  localign_distmat.hpp  postproc.cpp  postproc.hpp
src/prob_dt/: AdjMat.cpp  AdjMat.hpp  CMakeLists.txt  Laplacian.cpp  Laplacian.hpp  PermMat.cpp  PermMat.hpp  ProbData.cpp  ProbData.hpp  SimMat.cpp  SimMat.hpp
src/sdp_wrappers/: csdp_wrapper.cpp  dsdp_wrapper.cpp  sdp_wrapper.cpp  sdp_wrapper.hpp  sdp_wrapper_cfg.cpp  sdpa_wrapper.cpp
src/seriation_gen/: CMakeLists.txt  SerGenAdj.cpp  SerGenAdj.hpp  Serialization.cpp  Serialization.hpp  gdist_seriation_gen.cpp  gdist_seriation_gen.hpp  lev_seriation.cpp  lev_seriation.hpp  plain_seriation_gen.cpp  plain_seriation_gen.hpp  rand_seriation_gen.cpp  rand_seriation_gen.hpp  repetative_seriation_gen.cpp  repetative_seriation_gen.hpp  sdp_seriation_gen.cpp  sdp_seriation_gen.hpp  sdp_seriation_prob_gen.cpp  sdp_seriation_prob_gen.hpp  seriation_gen_cfg.cpp
src/tests/: CMakeLists.txt  t_config.cpp  t_csdp_wrapper.cpp  t_degreesort.cpp  t_dsdp_wrapper.cpp  t_fastmap.cpp  t_graphfromadj.cpp  t_icp.cpp  t_jumbled_adjmat_gen.cpp  t_origidx.cpp  t_sdp_ser_prob_gen.cpp  t_sdp_seriation_gen.cpp  t_sdpa_wrapper.cpp  t_sdplr_wrapper.cpp  t_seqan.cpp
src/tools/: icp.hpp  matlab_io.hpp  progressbar.hpp  quad_helper.hpp
src/util/: .mat  create_video  extract-bipartite.py  extract.py  heatkernel.m  mutagen-csv-to-xml.sh  mutagen.sh  oneclass.pl  perminvtest.m  test_newidea.m  values.m
src/util/randpat/: TriangleWrap.pm  triangulate.pl
